objects/USA_Profile_Summary__c.object
<CustomObject>
    <description>Table used to upload Account Profile summary information for Briefcase.</description>
    <fields>
        <fullName>USA_BOM_Displays__c</fullName>
        <label>BOM Displays</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_BOM_Menu__c</fullName>
        <label>BOM Menu</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Distributor__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Email_Tree__c</fullName>
        <formula>Owner:User.Email &amp; &quot; -&gt; &quot; &amp; IF(ISBLANK(Owner:User.Manager.Email),&quot;&quot;, Owner:User.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;)</formula>
        <label>Email Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Premise__c</fullName>
        <label>Premise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Target_Display_Univ__c</fullName>
        <label>Target Display Univ</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_Displays__c</fullName>
        <label>Target Displays</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_Menu_Univ__c</fullName>
        <label>Target Menu Univ</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_Menu__c</fullName>
        <label>Target Menu</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_ShelfAdj__c</fullName>
        <label>Target ShelfAdj</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_ShelfFac__c</fullName>
        <label>Target ShelfFac</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_ShelfLoc__c</fullName>
        <label>Target ShelfLoc</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_Universe__c</fullName>
        <label>Target Universe</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Team__c</fullName>
        <formula>CONTAINS(USA_Email_Tree__c, $User.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>